<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/headerLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <main.com.ngrewards.fonttypeclasses.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:text="@string/filterbycateory"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:layout_margin="5dp"
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

<main.com.ngrewards.fonttypeclasses.BoldTextView
    android:textColor="@color/black"
    android:layout_marginLeft="10dp"
    android:textSize="@dimen/large"
    android:text="@string/sortby"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
            <main.com.ngrewards.fonttypeclasses.NoramlTextView
                android:textColor="@color/black"
                android:textSize="@dimen/medium"
                android:layout_marginLeft="10dp"

                android:text="@string/priced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup

                android:layout_marginLeft="10dp"

                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/lowtohigh"
                    android:textColor="@color/black"
                    android:text="@string/lowtohigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/hightolow"
                    android:textColor="@color/black"
                    android:text="@string/hightolow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>
            <main.com.ngrewards.fonttypeclasses.NoramlTextView
                android:textColor="@color/black"
                android:textSize="@dimen/medium"
                android:layout_marginLeft="10dp"

                android:text="@string/avgreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RatingBar
                android:layout_margin="10dp"
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:numStars="5"
                android:progressDrawable="@drawable/ratingmediumdrable"
                android:scaleX="1"
                android:scaleY="1"
                android:transformPivotX="5dp"
                android:transformPivotY="5dp" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/reset_tv"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="@dimen/large"
                    android:textColor="@color/white"
                    android:background="@color/pinkborder"
                    android:text="@string/clearfilter"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/filter_tv"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="@dimen/large"
                    android:textColor="@color/white"
                    android:background="@color/pinkborder"
                    android:text="@string/filter"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>