<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <main.com.ngrewards.fonttypeclasses.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/filterbycateory"
                android:textColor="@color/black"
                android:textSize="@dimen/large" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"></Spinner>

            <main.com.ngrewards.fonttypeclasses.NoramlTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="@string/distance"
                android:textColor="@color/black"
                android:textSize="@dimen/medium" />

            <Spinner

                android:id="@+id/distance_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"></Spinner>

            <main.com.ngrewards.fonttypeclasses.NoramlTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="@string/papularity"
                android:textColor="@color/black"
                android:textSize="@dimen/medium" />

            <RadioGroup

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/lowtohigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowtohighlikes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/hightolow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hightolowlikes"
                    android:textColor="@color/black" />

            </RadioGroup>

            <main.com.ngrewards.fonttypeclasses.NoramlTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="@string/avgreview"
                android:textColor="@color/black"
                android:textSize="@dimen/medium" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:numStars="5"
                android:progressDrawable="@drawable/ratingmediumdrable"
                android:scaleX="1"
                android:scaleY="1"
                android:transformPivotX="5dp"
                android:transformPivotY="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/reset_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/pinkborder"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/clearfilter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large" />

                <TextView
                    android:id="@+id/filter_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@color/pinkborder"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>